# tree-sitter-lang

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-lang.pc.in
bindings/c/tree_sitter/: tree-sitter-lang.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_lang/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLangTests/: TreeSitterLangTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
